# LLVM sources have warnings
IF(MSVC)
ELSE()
  add_compile_flag("-Wno-maybe-uninitialized")
  add_compile_flag("-Wno-unused-function")
ENDIF()

SET(debugging_SOURCES
  APInt.cpp
  APFloat.cpp
  BinaryenDebugging.cpp
  Binary.cpp
  ConvertUTF.cpp
  DataExtractor.cpp
  Debug.cpp
  DJB.cpp
  Dwarf.cpp
  dwarf2yaml.cpp
  DWARFAbbreviationDeclaration.cpp
  DWARFAcceleratorTable.cpp
  DWARFAddressRange.cpp
  DWARFCompileUnit.cpp
  DWARFContext.cpp
  DWARFDataExtractor.cpp
  DWARFDebugAbbrev.cpp
  DWARFDebugAddr.cpp
  DWARFDebugAranges.cpp
  DWARFDebugArangeSet.cpp
  DWARFDebugFrame.cpp
  DWARFDebugInfoEntry.cpp
  DWARFDebugLine.cpp
  DWARFDebugLoc.cpp
  DWARFDebugMacro.cpp
  DWARFDebugPubTable.cpp
  DWARFDebugRangeList.cpp
  DWARFDebugRnglists.cpp
  DWARFDie.cpp
  DWARFExpression.cpp
  DWARFFormValue.cpp
  DWARFGdbIndex.cpp
  DWARFListTable.cpp
  DWARFTypeUnit.cpp
  DWARFUnit.cpp
  DWARFUnitIndex.cpp
  DWARFVerifier.cpp
  Error.cpp
  ErrorHandling.cpp
  FoldingSet.cpp
  FormatVariadic.cpp
  Hashing.cpp
  Magic.cpp
  ManagedStatic.cpp
  MCRegisterInfo.cpp
  MD5.cpp
  MemoryBuffer.cpp
  NativeFormatting.cpp
  ObjectFile.cpp
  obj2yaml_Error.cpp
  Optional.cpp
  Path.cpp
  raw_ostream.cpp
  ScopedPrinter.cpp
  SmallVector.cpp
  StringMap.cpp
  StringRef.cpp
  SymbolicFile.cpp
  TargetRegistry.cpp
  Triple.cpp
  Twine.cpp
  UnicodeCaseFold.cpp
  WithColor.cpp
)
ADD_LIBRARY(debugging OBJECT ${debugging_SOURCES})
